fix(countdown): gap -> grid-gap

--- a/scss/base/_html.scss
+++ b/scss/base/_html.scss
@@ -279,7 +279,7 @@ button {
 .countdown {
   display: grid;
   margin: 0 1rem 7rem;
-  gap: 5rem 2.4rem;
+  grid-gap: 5rem 2.4rem;
   grid-template-columns: repeat(4, 1fr);
   color: var(--soft-red);
   perspective: 500px;
